	- add OpenBSD sndio driver (by Thomas Pfaff)
	- fix memory leak: free extra pattern allocated by the XM loader
	- fix memory leak: free temporary pointer arrays in the IT loader
	- fix memory leak: free temporary pointer arrays in the S3M loader
	- fix memory leak: free header and filename when file is invalid
	- fix buffer overflow in OXM and DTT loaders (reported by Luigi
	  Auriemma)

2.5.1 (20071207): 11 years after xmp 0.09a, the first public release!
	- fix Winamp plugin default sampling rate (reported by Mirko Buffoni)
	- Winamp plugin number of channels fixed by Mirko Buffoni
	- recognize TakeTracker TDZ4 modules (reported by Lorence Lombardo)
	- fix crash in anticlick when pan amplitude is set to 100% (reported
	  by Mirko Buffoni)
	- extend playable octave range (fixes replay of octave 9 notes in
	  beek-my_eleventh_year.it, reported by Mirko Buffoni)
	- Protracker-style sample loops only valid with loop start 0 (fixes
	  M.K. Amegas conversion and others, reported by Mirko Buffoni)
	- reset fadeout on new instrument fetch (fixes echo in "pain of lace"
	  pat 0 ch 2-3, reported by Mirko Buffoni)
	- add quirk for simultaneous volume slide up and down (M.K. allows it
	  but S3M doesn't, fixes Red Dream.mod reported by Ralf Hoffmann)
	- Impulse Tracker in sample mode has instrument priority quirk
	- fix IT far right (64) stereo channel panning
	- merge Amiga port improvements by Johan Samuelsson
	- merge Amiga xfdmaster.library support by Chris Young 
	- Amiga port also buildable for AROS (AHI driver not tested)
	- fix global track parsing in DMF loader (fixes mok-trea.dmf, reported
	  by Lorence Lombardo)
	- fix Winamp plugin to use the equalizer (reported by Mirko Buffoni)
	- skip 0xfe and 0xff S3M/IT control patterns at load time
	- fix scan of pattern break in the last pattern of the module
	- add BPM quirk for XMs converted with MED2XM (fixes Fascinated.xm,
          reported by Lorence Lombardo)